5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1670_2966.log
== TEST (2019-04-16 18:31:27) 
-- CODE:
(input("mulheres:  ")
input("preco_do_ingreco:  ")
input("quantiddade_de_ingreco:  ")
if:
	mulheres= s 
-- ERROR:
File "XXXX", line 2
    input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:35:02) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if:
	x= s
	y-20%
	
-- ERROR:
File "XXXX", line 4
    if:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:35:08) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if:
	x= s
	y-20%
	
-- ERROR:
File "XXXX", line 4
    if:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:35:13) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if
	x= s
	y-20%
	
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:35:14) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if
	x= s
	y-20%
	
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:35:24) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if x= s:
	y-20%
	
-- ERROR:
File "XXXX", line 4
    if x= s:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:35:25) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if x= s:
	y-20%
	
-- ERROR:
File "XXXX", line 4
    if x= s:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:37:18) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if 
	x= s
	y-20%
	
a=y*z 
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:37:27) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if;
	x= s
	y-20%
	
a=y*z 
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if;
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:20) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if
	x= s
	y-20%
	a=y*z 
else
a=y*z
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:22) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if
	x= s
	y-20%
	a=y*z 
else
a=y*z
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:25) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if;
	x= s
	y-20%
	a=y*z 
else
a=y*z
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if;
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:26) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if;
	x= s
	y-20%
	a=y*z 
else
a=y*z
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if;
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:30) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if:
	x= s
	y-20%
	a=y*z 
else
a=y*z
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:31) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if:
	x= s
	y-20%
	a=y*z 
else
a=y*z
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:40:02) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if
	x= s
	y-20%
	a=y*z; 
else
	a=y*z;
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:40:03) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if
	x= s
	y-20%
	a=y*z; 
else
	a=y*z;
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:40:04) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if
	x= s
	y-20%
	a=y*z; 
else
	a=y*z;
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:40:04) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if
	x= s
	y-20%
	a=y*z; 
else
	a=y*z;
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:41:13) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if
	x= s
	y-20%
	a=y*z; 
else
	a=y*z;
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:41:14) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if
	x= s
	y-20%
	a=y*z; 
else
	a=y*z;
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:41:14) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if
	x= s
	y-20%
	a=y*z; 
else
	a=y*z;
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:41:54) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if
	x= s
	y-20%
	a=y*z 
else
	a=y*z
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:43:37) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if	x= s
	y-20%
	a=y*z 
else
	a=y*z
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if	x= s
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:44:27) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if	
	x= s
	a=y*z-20%
else
	a=y*z
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if	
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:22) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if	x= s
	a=y*z-20%
else
	a=y*z
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if	x= s
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:31) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if:	x=s
	a=y*z-20%
else
	a=y*z
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if:	x=s
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:32) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if:	x=s
	a=y*z-20%
else
	a=y*z
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if:	x=s
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:32) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if:	x=s
	a=y*z-20%
else
	a=y*z
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if:	x=s
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:32) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if:	x=s
	a=y*z-20%
else
	a=y*z
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if:	x=s
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:33) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if:	x=s
	a=y*z-20%
else
	a=y*z
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if:	x=s
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:33) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if:	x=s
	a=y*z-20%
else
	a=y*z
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if:	x=s
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:33) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if:	x=s
	a=y*z-20%
else
	a=y*z
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if:	x=s
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:43) 
-- CODE:
x=input("mulheres:  ")
y=input("preco_do_ingreco:  ")
z=input("quantiddade_de_ingreco:  ")
if;	x=s
	a=y*z-20%
else
	a=y*z
print(round(a, 2))
-- ERROR:
File "XXXX", line 4
    if;	x=s
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
